--- a/labtask 4 (Term Project)/views/homepage.ejs
+++ b/labtask 4 (Term Project)/views/homepage.ejs
@@ -44,7 +44,7 @@
 </section>
 
 <!-- Products -->
-<section id="products" class="products">
+<!-- <section id="products" class="products">
   <h1 class="heading">Latest <span>Products</span></h1>
   <div class="box-container">
     <div class="box">
@@ -64,7 +64,7 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
-        <a href="#" class="btn">Add To Cart</a>
+        <a href="#" class="btn1">Add To Cart</a>
       </div>
     </div>
     <div class="box">
@@ -84,7 +84,7 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
-        <a href="#" class="btn">Add To Cart</a>
+        <a href="#" class="btn1">Add To Cart</a>
       </div>
     </div>
     <div class="box">
@@ -104,7 +104,7 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
-        <a href="#" class="btn">Add To Cart</a>
+        <a href="#" class="btn1">Add To Cart</a>
       </div>
     </div>
     <div class="box">
@@ -124,7 +124,7 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
-        <a href="#" class="btn">Add To Cart</a>
+        <a href="#" class="btn1">Add To Cart</a>
       </div>
     </div>
     <div class="box">
@@ -144,7 +144,7 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
-        <a href="#" class="btn">Add To Cart</a>
+        <a href="#" class="btn1">Add To Cart</a>
       </div>
     </div>
     <div class="box">
@@ -164,11 +164,14 @@
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
         </div>
-        <a href="#" class="btn">Add To Cart</a>
+        <a href="#" class="btn1">Add To Cart</a>
       </div>
     </div>
   </div>
-</section>
+</section> -->
+
+
+
 
 <!-- Featured Products Section -->
 <section id="featured" class="featured">
@@ -202,7 +205,7 @@
         facere itaque nihil ratione maiores.
       </p>
       <div class="price">Rs.15,000<span>Rs.20,000</span></div>
-      <a href="#" class="btn">Add to Cart</a>
+      <a href="#" class="btn1">Add to Cart</a>
     </div>
   </div>
   <div class="row">
@@ -233,7 +236,7 @@
         facere itaque nihil ratione maiores.
       </p>
       <div class="price">Rs.15,000<span>Rs.20,000</span></div>
-      <a href="#" class="btn">Add to Cart</a>
+      <a href="#" class="btn1">Add to Cart</a>
     </div>
   </div>
   <div class="row">
@@ -264,7 +267,7 @@
         facere itaque nihil ratione maiores.
       </p>
       <div class="price">Rs.15,000<span>Rs.20,000</span></div>
-      <a href="#" class="btn">Add to Cart</a>
+      <a href="#" class="btn1">Add to Cart</a>
     </div>
   </div>
 </section>
@@ -342,7 +345,7 @@
     </p>
     <form>
       <input type="email" class="box" />
-      <input type="submit" class="btn" />
+      <input type="submit" class="btn1" />
     </form>
   </div>
 </section>
