--- a/labtask 4 (Term Project)/views/layout.ejs
+++ b/labtask 4 (Term Project)/views/layout.ejs
@@ -16,52 +16,58 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/loginstyle.css" />
 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script/script.js"></script>
+    <script src="script/loginscript.js"></script>
     <!-- Header Section: NavBar -->
     <header>
-      <div id="menu-bar" class="fa-solid fa-bars"></div>
+      <div id="menu-bar" class="fa-soli d fa-bars"></div>
 
-      <a href="#" class="logo">Nike Store</a>
+      <a href="#" class="logo" style="text-decoration: none;">Nike Store</a>
       <nav class="navbar">
         <a href="#home">Home</a>
-        <a href="#products">Products</a>
+        <a href="/deals">Products</a>
         <a href="#featured">Featured</a>
         <a href="#review">Review</a>
 
-
         <% if (user) { %>
-        
-          <a href="/profile">Profile </a>
-          <a href="/admin-profile">Admin Profile </a>
-          <a href="/logout">Logout <%= user.name %> </a>
 
+        <a href="/profile">Profile </a>
+        <a href="/admin-profile">Admin Profile </a>
+        <a href="/logout">Logout <%= user.name %> </a>
 
         <% } else { %>
-          <a class="nav-link" href="/login">Login</a>
-          <a class="nav-link" href="/register">Register</a>
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/register">Register</a>
         <% } %>
-
       </nav>
       <div class="icons">
         <!-- give icon class -->
         <a href="" class="fa-solid fa-heart"></a>
-        <a href="" class="fa-solid fa-cart-arrow-down"></a>
+        <a href="/deals/cart" class="fa-solid fa-cart-arrow-down"></a>
         <a href="" class="fa-solid fa-user"></a>
       </div>
     </header>
-    <div class="container" style="margin-top: 90px;margin-bottom: -90px;">
+    <div class="container" style="margin-top: 90px; margin-bottom: -90px">
       <% if (flash) { %>
-        <div class="alert alert-<%-flash.type%>">
-          <%= flash.message %>
-        </div>
+      <div class="alert alert-<%-flash.type%>"><%= flash.message %></div>
       <% } %>
-      
     </div>
-    <%-body  %>
-
+    <% if (typeof body !== 'undefined') { %> <%- body %> <% } %>
 
     <!-- Footer Section -->
     <section class="footer">
@@ -96,9 +102,5 @@
         </div>
       </div>
     </section>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="script/script.js"></script>
   </body>
 </html>
-
